Add left carrot '<' to title closing element
Without this addition, the page loads blank,
because the rest of the file is being interpreted
as the page's title.

--- a/recipes/chocolate-moose.html
+++ b/recipes/chocolate-moose.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chocolate Moose/title>
+    <title>Chocolate Moose</title>
 </head>
 <body>
     <h1>Chocolate Moose</h1>
