Create content structure for Moose recipe page

--- a/recipes/chocolate-moose.html
+++ b/recipes/chocolate-moose.html
@@ -8,5 +8,20 @@
 <body>
     <h1>Chocolate Moose</h1>
     <a href="./../index.html">Home</a>
+    <p><img src="https://live.staticflickr.com/8176/7981020941_ac060848ac_b.jpg" alt="Lifesize Chocolate Moose" width="600" height="400"></p>
+    <h2>Description</h2>
+    <p></p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ol>
 </body>
 </html>
