Duplicate boilerplate and content structure for all recipe pages

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/chocolate-moose.html">Chocolate Moose</a>
+    <div><a href="./recipes/chocolate-moose.html">Chocolate Moose</a></div>
+    <div><a href="./recipes/ice-cubes.html">Ice Cubes</a></div>
+    <div><a href="./recipes/banana-bread.html">Banana Bread</a></div>
 </body>
 </html>
