--- a/recipes/chocolate-moose.html
+++ b/recipes/chocolate-moose.html
@@ -10,18 +10,20 @@
     <a href="./../index.html">Home</a>
     <p><img src="https://live.staticflickr.com/8176/7981020941_ac060848ac_b.jpg" alt="Lifesize Chocolate Moose" width="600" height="400"></p>
     <h2>Description</h2>
-    <p></p>
+    <p>A delcious meal known well for its bold boldness! This is the confection of choice for many, including parents wanting a less religious Easter-Egg Hunt, hunters looking to spice up their wall-mount collection, and even rich Canadians.</p>
+    <p>I'll never forget my first chocolate moose. The smell of the rich chocolate mixed with the deep musk of moose-fur. The sound of its hooves clomping over the pine needles as it chased me through the forest. The taste of victory. The subsequent dysentery. Not a beginner recipe.</p>
+    </ul>
     <h2>Ingredients</h2>
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>40 gallons of melted Chocolate (preferrably milk)</li>
+        <li>1 Live Moose</li>
+        <li>4 cans of Moose Bait</li>
     </ul>
     <h2>Steps</h2>
     <ol>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Lure the moose into your kitchen using the moose bait.</li>
+        <li>Cover the moose with melted chocolate, using a baking spatula to spread the chocolate around.</li>
+        <li>Enjoy. Serves 21</li>
     </ol>
 </body>
 </html>
