add recipe content to banana-bread recipe page

--- a/recipes/banana-bread.html
+++ b/recipes/banana-bread.html
@@ -10,18 +10,18 @@
     <a href="./../index.html">Home</a>
     <p><img src="" alt="Lifesize Banana Bread" width="600" height="400"></p>
     <h2>Description</h2>
-    <p></p>
+    <p>Banana bread is something many of us have dreamed of making. Myself included! So let's try together--it can't be that hard...</p>
     <h2>Ingredients</h2>
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>1 Loaf of Bread</li>
+        <li>12 Bananas</li>
+        <li>Duct Tape</li>
     </ul>
     <h2>Steps</h2>
     <ol>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Remove the loaf of bread from its bag.</li>
+        <li>Using the duct tape, attach the bananas to the bread. Do not let the bread remain visible.</li>
+        <li>Enjoy hot. Serves at leat 12.</li>
     </ol>
 </body>
 </html>
