--- a/recipes/ice-cubes.html
+++ b/recipes/ice-cubes.html
@@ -10,18 +10,21 @@
     <a href="./../index.html">Home</a>
     <p><img src="" alt="Lifesize Ice Cubes" width="600" height="400"></p>
     <h2>Description</h2>
-    <p></p>
+    <p>Ah, ice cubes. A wonderful date-night delicacy! This recipe will show you not only how to prepare such a treat, but how to present it with the flair it truly deserves.</p>
+    <p>WARNING: This recipe is not for those with sensitive teeth.</p>
     <h2>Ingredients</h2>
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Water</li>
+        <li>Basil</li>
     </ul>
     <h2>Steps</h2>
     <ol>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Pour the water into a large mixing bowl.</li>
+        <li>Place the mixing bowl in the freezer (if you live in the arctic, place outside for authentic ice).</li>
+        <li>Remove the bowl from the cold when water is frozen.</li>
+        <li>Remove the ice from the bowl.</li>
+        <li>Using a hot butter-knife or a rotary-saw, cut the ice down into cubes.</li>
+        <li>Garnish with basil and enjoy. Serves 2</li>
     </ol>
 </body>
 </html>
