--- a/recipes/ice-cubes.html
+++ b/recipes/ice-cubes.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Ice Cubes</h1>
     <a href="./../index.html">Home</a>
-    <p><img src="" alt="Lifesize Ice Cubes" width="600" height="400"></p>
+    <p><img src="./../images/iCube.jpg" alt="Lifesize Ice Cubes" width="266" height="400"></p>
     <h2>Description</h2>
     <p>Ah, ice cubes. A wonderful date-night delicacy! This recipe will show you not only how to prepare such a treat, but how to present it with the flair it truly deserves.</p>
     <p>WARNING: This recipe is not for those with sensitive teeth.</p>
