Add image to home page and resize

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <img src="./images/landingPic.png" alt="The Greatest Chef" width="450" height="450">
     <div><a href="./recipes/chocolate-moose.html">Chocolate Moose</a></div>
     <div><a href="./recipes/ice-cubes.html">Ice Cubes</a></div>
     <div><a href="./recipes/banana-bread.html">Banana Bread</a></div>
