--- a/recipes/ice-cubes.html
+++ b/recipes/ice-cubes.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ice Cubes</title>
+    <link rel="stylesheet" href="./../styles.css">
 </head>
 <body>
     <h1>Ice Cubes</h1>
