Update website title

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Recipes For The Greatest Foods Ever Created</h1>
     <img src="./images/landingPic.png" alt="The Greatest Chef" width="450" height="450">
     <div><a href="./recipes/chocolate-moose.html">Chocolate Moose</a></div>
     <div><a href="./recipes/ice-cubes.html">Ice Cubes</a></div>
