--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Recipes For The Greatest Foods Ever Created</h1>
+    <h1>The Greatest Cookbook Ever Written</h1>
     <img src="./images/landingPic.png" alt="The Greatest Chef" width="450" height="450">
-    <div><a href="./recipes/chocolate-moose.html">Chocolate Moose</a></div>
-    <div><a href="./recipes/ice-cubes.html">Ice Cubes</a></div>
-    <div><a href="./recipes/banana-bread.html">Banana Bread</a></div>
+    <h2>Recipes</h2>
+    <div class="container">
+        <div><a href="./recipes/chocolate-moose.html">Chocolate Moose</a></div>
+        <div><a href="./recipes/ice-cubes.html">Ice Cubes</a></div>
+        <div><a href="./recipes/banana-bread.html">Banana Bread</a></div>
+    </div>
 </body>
 </html>
