Center links from recipe pages to landing page

--- a/recipes/chocolate-moose.html
+++ b/recipes/chocolate-moose.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Chocolate Moose</h1>
-    <a href="./../index.html">Home</a>
+    <a href="./../index.html" class="home-link">Home</a>
     <p><img src="https://live.staticflickr.com/8176/7981020941_ac060848ac_b.jpg" alt="Lifesize Chocolate Moose" width="600" height="400"></p>
     <h2>Description</h2>
     <p>A delcious meal known well for its bold boldness! This is the confection of choice for many, including parents wanting a less religious Easter-Egg Hunt, hunters looking to spice up their wall-mount collection, and even rich Canadians.</p>
