Create website directory and move html and css files into into
This will allow future contributors to open all relevant files
at once using 'code .' in order to save time on the command
line.

--- a/website/index.html
+++ b/website/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>The Greatest Cookbook Ever Written</h1>
-    <img src="./images/landingPic.png" alt="The Greatest Chef" width="450" height="450">
+    <img src="./../images/landingPic.png" alt="The Greatest Chef" width="450" height="450">
     <h2>Recipes</h2>
     <div class="container">
         <div><a href="./recipes/chocolate-moose.html">Chocolate Moose</a></div>
