--- a/website/recipes/banana-bread.html
+++ b/website/recipes/banana-bread.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Banana Bread</h1>
     <a href="./../index.html" class="home-link">Home</a>
-    <p><img src="./../images/bBread.jpg" alt="Lifesize Banana Bread" width="390" height="400"></p>
+    <p><img src="./../../images/bBread.jpg" alt="Lifesize Banana Bread" width="390" height="400"></p>
     <h2>Description</h2>
     <p>Banana bread is something many of us have dreamed of making. Myself included! So let's try together--it can't be that hard...</p>
     <h2>Ingredients</h2>
