Update banana bread webpage to have Ingredients and Steps inline

--- a/website/recipes/banana-bread.html
+++ b/website/recipes/banana-bread.html
@@ -12,17 +12,26 @@
     <p><img src="./../../images/bBread.jpg" alt="Lifesize Banana Bread" width="390" height="400"></p>
     <h2>Description</h2>
     <p>Banana bread is something many of us have dreamed of making. Myself included! So let's try together--it can't be that hard...</p>
-    <h2>Ingredients</h2>
-    <ul>
-        <li>1 Loaf of Bread</li>
-        <li>12 Bananas</li>
-        <li>Duct Tape</li>
-    </ul>
-    <h2>Steps</h2>
-    <ol>
-        <li>Remove the loaf of bread from its bag.</li>
-        <li>Using the duct tape, attach the bananas to the bread. Do not let the bread remain visible.</li>
-        <li>Enjoy hot. Serves at leat 12.</li>
-    </ol>
+    <div class="container">
+        <div class="shared-line">
+            <h2>Ingredients</h2>
+            <ul>
+                <li>1 Loaf of Bread</li>
+                <li>12 Bananas</li>
+                <li>Duct Tape</li>
+            </ul>
+        </div>
+        <div class="shared-line">
+            <h2>Steps</h2>
+            <ol>
+                <li>Remove the loaf of bread from its bag.</li>
+                <li>Using the duct tape, attach the bananas to the bread.</li>
+                <ul>
+                    <li><strong>Do not let the bread remain visible.</strong></li>
+                </ul>
+                <li>Enjoy hot. Serves at leat 12.</li>
+            </ol>
+        </div>
+    </div>
 </body>
 </html>
