Update ice-cube page to have ingredients and steps inline, vert-align
Vertically align the ingredients and steps divs to sit
at the top of their containers.

--- a/website/recipes/ice-cubes.html
+++ b/website/recipes/ice-cubes.html
@@ -13,19 +13,28 @@
     <h2>Description</h2>
     <p>Ah, ice cubes. A wonderful date-night delicacy! This recipe will show you not only how to prepare such a treat, but how to present it with the flair it truly deserves.</p>
     <p>WARNING: This recipe is not for those with sensitive teeth.</p>
-    <h2>Ingredients</h2>
-    <ul>
-        <li>Water</li>
-        <li>Basil</li>
-    </ul>
-    <h2>Steps</h2>
-    <ol>
-        <li>Pour the water into a large mixing bowl.</li>
-        <li>Place the mixing bowl in the freezer (if you live in the arctic, place outside for authentic ice).</li>
-        <li>Remove the bowl from the cold when water is frozen.</li>
-        <li>Remove the ice from the bowl.</li>
-        <li>Using a hot butter-knife or a rotary-saw, cut the ice down into cubes.</li>
-        <li>Garnish with basil and enjoy. Serves 2</li>
-    </ol>
+    <div class="container">
+        <div class="shared-line">
+            <h2>Ingredients</h2>
+            <ul>
+                <li>Water</li>
+                <li>Basil</li>
+            </ul>
+        </div>
+        <div class="shared-line">
+            <h2>Steps</h2>
+            <ol>
+                <li>Pour the water into a large mixing bowl.</li>
+                <li>Place the mixing bowl in the freezer</li>
+                <ul>
+                    <li>(if you live in the arctic, place outside for authentic ice).</li>
+                </ul>
+                <li>Remove the bowl from the cold when water is frozen.</li>
+                <li>Remove the ice from the bowl.</li>
+                <li>Using a hot butter-knife or a rotary-saw, cut the ice down into cubes.</li>
+                <li>Garnish with basil and enjoy. Serves 2</li>
+            </ol>
+        </div>
+    </div>
 </body>
 </html>
