Update moose webpage to have Ingredients and Steps inline, typos

--- a/website/recipes/chocolate-moose.html
+++ b/website/recipes/chocolate-moose.html
@@ -13,18 +13,23 @@
     <h2>Description</h2>
     <p>A delcious meal known well for its bold boldness! This is the confection of choice for many, including parents wanting a less religious Easter-Egg Hunt, hunters looking to spice up their wall-mount collection, and even rich Canadians.</p>
     <p>I'll never forget my first chocolate moose. The smell of the rich chocolate mixed with the deep musk of moose-fur. The sound of its hooves clomping over the pine needles as it chased me through the forest. The taste of victory. The subsequent dysentery. Not a beginner recipe.</p>
-    </ul>
-    <h2>Ingredients</h2>
-    <ul>
-        <li>40 gallons of melted Chocolate (preferrably milk)</li>
-        <li>1 Live Moose</li>
-        <li>4 cans of Moose Bait</li>
-    </ul>
-    <h2>Steps</h2>
-    <ol>
-        <li>Lure the moose into your kitchen using the moose bait.</li>
-        <li>Cover the moose with melted chocolate, using a baking spatula to spread the chocolate around.</li>
-        <li>Enjoy. Serves 21</li>
-    </ol>
+    <div class="container">
+        <div class="shared-line">
+            <h2>Ingredients</h2>
+            <ul>
+                <li>40 gallons of melted Chocolate (preferrably milk)</li>
+                <li>1 Live Moose</li>
+                <li>4 cans of Moose Bait</li>
+            </ul>
+        </div>
+        <div class="shared-line">
+            <h2>Steps</h2>
+            <ol>
+                <li>Lure the moose into your kitchen using the moose bait.</li>
+                <li>Cover the moose with melted chocolate, using a baking spatula to spread the chocolate around.</li>
+                <li>Enjoy. Serves 21.</li>
+            </ol>
+        </div>
+    </div>
 </body>
 </html>
