Remove parenthesese on unordered list element

--- a/website/recipes/ice-cubes.html
+++ b/website/recipes/ice-cubes.html
@@ -27,7 +27,7 @@
                 <li>Pour the water into a large mixing bowl.</li>
                 <li>Place the mixing bowl in the freezer</li>
                 <ul>
-                    <li>(if you live in the arctic, place outside for authentic ice).</li>
+                    <li>If you live in the arctic, place outside for authentic ice.</li>
                 </ul>
                 <li>Remove the bowl from the cold when water is frozen.</li>
                 <li>Remove the ice from the bowl.</li>
