--- a/website/recipes/ice-cubes.html
+++ b/website/recipes/ice-cubes.html
@@ -12,7 +12,7 @@
     <p><img src="./../../images/iCube.jpg" alt="Lifesize Ice Cubes" width="266" height="400"></p>
     <h2>Description</h2>
     <p>Ah, ice cubes. A wonderful date-night delicacy! This recipe will show you not only how to prepare such a treat, but how to present it with the flair it truly deserves.</p>
-    <p>WARNING: This recipe is not for those with sensitive teeth.</p>
+    <p><strong>WARNING:</strong> This recipe is not for those with sensitive teeth.</p>
     <div class="container">
         <div class="shared-line">
             <h2>Ingredients</h2>
