Fix width for divs with shared-line class

--- a/website/recipes/banana-bread.html
+++ b/website/recipes/banana-bread.html
@@ -25,10 +25,7 @@
             <h2>Steps</h2>
             <ol>
                 <li>Remove the loaf of bread from its bag.</li>
-                <li>Using the duct tape, attach the bananas to the bread.</li>
-                <ul>
-                    <li><strong>Do not let the bread remain visible.</strong></li>
-                </ul>
+                <li>Using the duct tape, attach the bananas to the bread. <strong>Do not let the bread remain visible.</strong></li>
                 <li>Enjoy hot. Serves at leat 12.</li>
             </ol>
         </div>
