--- a/website/recipes/ice-cubes.html
+++ b/website/recipes/ice-cubes.html
@@ -31,7 +31,7 @@
                 </ul>
                 <li>Remove the bowl from the cold when water is frozen.</li>
                 <li>Remove the ice from the bowl.</li>
-                <li>Using a hot butter-knife or a rotary-saw, cut the ice down into cubes.</li>
+                <li>Using a hot butter-knife or a bandsaw, cut the ice down into cubes.</li>
                 <li>Garnish with basil and enjoy. Serves 2.</li>
             </ol>
         </div>
