Remove unordered list

--- a/website/recipes/ice-cubes.html
+++ b/website/recipes/ice-cubes.html
@@ -25,10 +25,7 @@
             <h2>Steps</h2>
             <ol>
                 <li>Pour the water into a large mixing bowl.</li>
-                <li>Place the mixing bowl in the freezer</li>
-                <ul>
-                    <li>If you live in the arctic, place outside for authentic ice.</li>
-                </ul>
+                <li>Place the mixing bowl in the freezer (if you live in the arctic, place outside for authentic ice).</li>
                 <li>Remove the bowl from the cold when water is frozen.</li>
                 <li>Remove the ice from the bowl.</li>
                 <li>Using a hot butter-knife or a bandsaw, cut the ice down into cubes.</li>
